<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:gravity="center_vertical"
            android:theme="@style/CustomAppTheme_textinputLayout">

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@null"
                android:hint="@string/login_user_name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:background="@color/ced3d8" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="60dip"
            android:gravity="center_vertical"
            android:theme="@style/CustomAppTheme_textinputLayout">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@null"
                android:hint="@string/login_user_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:background="@color/ced3d8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="80dip"
            android:layout_marginRight="80dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/btn_forget_pwd"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="70dip"
            android:layout_marginRight="70dip"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="80dip"
        android:layout_marginRight="80dip"
        android:layout_marginBottom="20dip"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="80px"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />

            <View
                android:layout_width="80px"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical|right"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_fast_login"
                android:textColor="@color/white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_phone_login"
                android:layout_width="0px"
                android:layout_height="80px"
                android:layout_weight="1"
                android:src="@mipmap/login_phone" />

            <ImageView
                android:id="@+id/iv_wechat_login"
                android:layout_width="0px"
                android:layout_height="80px"
                android:layout_weight="1"
                android:src="@mipmap/login_wechat" />

            <ImageView
                android:id="@+id/iv_saoma_login"
                android:layout_width="0px"
                android:layout_height="80px"
                android:layout_weight="1"
                android:src="@mipmap/login_saoma" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>