<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page.MainActivity">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/e5e5e5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_activity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/myevent_check"
            android:drawablePadding="4dip"
            android:gravity="center_horizontal"
            android:text="@string/tab_activity"
            android:textColor="@color/ff9a3b"
            android:textSize="10sp" />

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@mipmap/message_uncheck"
                android:drawablePadding="4dip"
                android:gravity="center_horizontal"
                android:text="@string/tab_message"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <View
                android:id="@+id/view_point"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dip"
                android:background="@drawable/red_circle" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/usermanager_uncheck"
            android:drawablePadding="4dip"
            android:gravity="center_horizontal"
            android:text="@string/tab_setting"
            android:textColor="@color/grey"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>